package com.apuliasoft.designpattern.strategy.explanation;

public class ConcreteBehaviourB implements IBehaviour {
    public void run() {
        // Run behaviour B
    }
}