package com.apuliasoft.designpattern.strategy.explanation;

public interface IBehaviour {
    void run();
}