@startuml Strategy Pattern class diagram
title Strategy Pattern class diagram
class Client {
    IBehaviour behaviour
    execute()
}

interface IBehaviour {
    run()
}

class ConcreteBehaviourA {
    run()
}

class ConcreteBehaviourB {
    run()
}

Client -> IBehaviour
IBehaviour <|-- ConcreteBehaviourA
IBehaviour <|-- ConcreteBehaviourB
@enduml